tests/errors/discard-borrow.ari
fn main() -> i64 {
  let number = 7;
  ref number;
  return 0;
}
